- Updated Argent Tools, Ballista/Unmaykr bolts, Argent Energy/Plate, BFG Cell, Inmortal Sphere, and Daisy (Now rabbit foot) item textures.
- Scaled up the OG Cyberdemon.
- New Arachnotron and Spider Mastermind animations!
- Lowered the sound of the chainsaws.
- Demons are now able to walk on Lava like Striders.
- Fixed not being able to search for the armors or a few weapons in the creative search menu.
- BFG Eternal, Heavy Cannon, Pistol, Plasma Gun, Rocket Launcher, Shotgun, Super Shotgun, and Unmaykr now use the bow animations for aiming.
- Fixed the Crucible Blade glitching open and closed.
- Massively increased cool down of Gore Nest Spawns and added a max of 3 waves per gore nest.
- Halved all demons (expect the Icon of Sin) follow ranges to 25, in line with vanilla mobs.
- Fixed weapons not being able to reload with ammo in the off hand.
- Fixed Marauder Axe not being reloadable with the Argent Blocks like the Crucible.
- More Goal related null checks added because bad "performance" mods.
- Prowler now teleports after attacking.
- Pain Elemental attacking animation updated to match new style.
- Hell Knight 2016/Dread Knight now perform a slam attack.
- Dread Knight Hand Blades redone.
- Added Ghast Tears to the drops of the boss tier demons loot tables.
- BFG now properly hurting the Ender Dragon.
- Icon of Sin blocks now face the proper way when built and look correct.
- Icon of Sin drops Argent Blocks instead of Energy, making the cost very worth it to summon.
- Icon of Sin no longer takes suffocation damage.
- Icon of Sin attack pattern has been redone.
- Ballista and Unmaykr tweaked.
- Fixed Marauder attacks.

## Not yet implemented but assets and code are in-process awaiting creation of models ## 
	- Baron 2016
	- Fireborne Baron
	- Armored Baron
	- Doom Hunter
	- Maykr Drones
	- Blood Maykrs
	- Arch Makyr
## Not yet implemented but assets and code are in-process awaiting creation of models ## 