@@ -19,6 +19,7 @@
 	"item.doom.soulcube": "Soul Cube",
 	"item.doom.gas_barrel": "Gas Barrel",
 	"item.doom.e1m1_music_disc": "E1M1 Music Disc",
+	"item.doom.e1m1_music_disc.desc": "E1M1",
 	"item.doom.doomblade": "Doom Blade",
 	"item.doom.chainsaw": "Chainsaw",
 	"item.doom.chainsaweternal": "Chainsaw Eternal",
